--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body{
     align-items: center;
     justify-content: space-between;
 }    
+
 .search input{
     border: 0;
     outline: 0;
@@ -33,6 +34,55 @@ body{
     flex: 1;
     margin-right: 16px;
     font-size: 18px;
+}
+@media only screen and (max-width: 768px){
+
+    .search .btn{
+        border: 0;
+    outline: 0;
+    border-radius: 50% ;
+    background-color:#ebfffc; 
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    }
+    .search input{
+        border: 0;
+        outline: 0;
+        background-color: #ebfffc;
+        color: #555;
+        padding: 10px 25px;
+        height: 60px;
+        border-radius: 30px;
+        flex: 1;
+        margin-right: 10px;
+        font-size: 10px;
+    }
+}
+@media only screen and (max-width: 425px){
+
+    .search .btn{
+        border: 0;
+    outline: 0;
+    border-radius: 50% ;
+    background-color:#ebfffc; 
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    }
+    .search input{
+        border: 0;
+        outline: 0;
+        background-color: #ebfffc;
+        color: #555;
+        padding: 10px 25px;
+        height: 50px;
+        border-radius: 30px;
+        flex: 1;
+        margin-right: 8px;
+        font-size: 18px;
+    }
+    
 }
 .search button{
     border: 0;
